# stripped_instruments

./: LICENSE
plaits/: CMakeLists.txt
plaits/plaits/: plaits.cc  resources.cc  resources.h
plaits/plaits/dsp/: dsp.h  envelope.h  voice.cc  voice.h
plaits/plaits/dsp/drums/: analog_bass_drum.h  analog_snare_drum.h  hi_hat.h  synthetic_bass_drum.h  synthetic_snare_drum.h
plaits/plaits/dsp/engine/: additive_engine.cc  additive_engine.h  bass_drum_engine.cc  bass_drum_engine.h  chord_engine.cc  chord_engine.h  engine.h  fm_engine.cc  fm_engine.h  grain_engine.cc  grain_engine.h  hi_hat_engine.cc  hi_hat_engine.h  modal_engine.cc  modal_engine.h  noise_engine.cc  noise_engine.h  particle_engine.cc  particle_engine.h  snare_drum_engine.cc  snare_drum_engine.h  speech_engine.cc  speech_engine.h  string_engine.cc  string_engine.h  swarm_engine.cc  swarm_engine.h  virtual_analog_engine.cc  virtual_analog_engine.h  waveshaping_engine.cc  waveshaping_engine.h  wavetable_engine.cc  wavetable_engine.h
plaits/plaits/dsp/fx/: diffuser.h  fx_engine.h  low_pass_gate.h  overdrive.h  sample_rate_reducer.h
plaits/plaits/dsp/noise/: clocked_noise.h  dust.h  fractal_random_generator.h  particle.h  smooth_random_generator.h
plaits/plaits/dsp/oscillator/: formant_oscillator.h  grainlet_oscillator.h  harmonic_oscillator.h  oscillator.h  sine_oscillator.h  string_synth_oscillator.h  variable_saw_oscillator.h  variable_shape_oscillator.h  vosim_oscillator.h  wavetable_oscillator.h  z_oscillator.h
plaits/plaits/dsp/physical_modelling/: delay_line.h  modal_voice.cc  modal_voice.h  resonator.cc  resonator.h  string.cc  string.h  string_voice.cc  string_voice.h
plaits/plaits/dsp/speech/: lpc_speech_synth.cc  lpc_speech_synth.h  lpc_speech_synth_controller.cc  lpc_speech_synth_controller.h  lpc_speech_synth_phonemes.cc  lpc_speech_synth_words.cc  lpc_speech_synth_words.h  naive_speech_synth.cc  naive_speech_synth.h  sam_speech_synth.cc  sam_speech_synth.h
rings/: CMakeLists.txt
rings/rings/: resources.cc  resources.h
stmlib/: CMakeLists.txt
stmlib/stmlib/: stmlib.h
stmlib/stmlib/dsp/: atan.h  cosine_oscillator.h  dsp.h  filter.h  limiter.h  rsqrt.h
stmlib/stmlib/utils/: dsp.h
(+1 files in other folders)
